--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "ISC",
   "engines": {
-    "node": ">=9 <=13",
+    "node": ">=9 <=15",
     "npm": "^5.6.0",
     "yarn": "^1.6.0"
   },
@@ -26,6 +26,7 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
+    "aws-sdk": "^2.690.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
